include/C/jdmath.h

/* mtarma.c */
BOOL   JDCALL FGetPartAcf(VECTOR vAcf, int cAcf, VECTOR vPartAcf);
double JDCALL DGetInvertEps(void);
double JDCALL DDiagXSXt(int iT, MATRIX mX, MATRIX mS, int cX);
double JDCALL DDiagXtSXtt(int iT, MATRIX mXt, MATRIX mS, int cX);
double JDCALL DTrace(MATRIX, int);
double JDCALL DTraceAB(MATRIX, MATRIX, int, int);
double JDCALL DVecsum(VECTOR, int);
/* mtbessel.h */
double JDCALL DBessel01(double x, int type, int n);
/* mtbesselfrac.h */
double JDCALL DExpInt(double x);
double JDCALL DExpInte(double x);
double JDCALL DExpInt1(double x);
double JDCALL DDawson(double x);
double JDCALL DBesselNu(double x, int type, double nu);
double JDCALL DDensGIG(double dX, double dNu, double dDelta, double dGamma);
double JDCALL DDensGH(double dX, double dNu, double dDelta, double dGamma, double dBeta);
/* mtcomplx.c */
double JDCALL c_abs(double xr, double xi);
BOOL   JDCALL c_div(double xr, double xi, double yr, double yi, double *zr, double *zi);
void   JDCALL c_mul(double xr, double xi, double yr, double yi, double *zr, double *zi);
void   JDCALL c_sqrt(double xr, double xi, double *yr, double *yi);
void   JDCALL c_exp(double xr, double xi, double *yr, double *yi);
void   JDCALL c_log(double xr, double xi, double *yr, double *yi);
BOOL   JDCALL FftDiscrete(VECTOR vXr, VECTOR vXi, int cN, int iForward);
void   JDCALL c_erf(double x, double y, double *erfx, double *erfy);
double JDCALL DGetInvertEpsNorm(MATRIX mA, int cA);
void   JDCALL EigVecDiv(MATRIX, VECTOR, VECTOR, int);
/* mtfft.c */
void   JDCALL FftComplex(VECTOR vXr, VECTOR vXi, int iPower, int iForward);
void   JDCALL FftReal(VECTOR vXr, VECTOR vXi, int iPower, int iForward);
int    JDCALL FFT1d(MATRIX mDest, MATRIX mSrc, int n, int iReverse, int isComplex);
/* mtfilter.c */
double JDCALL DEpKernelBandWidth(VECTOR vX, int iT1, int iT2);
BOOL   JDCALL FEpKernel(VECTOR vY, VECTOR vT, int cT, double *pdAlpha, VECTOR vG,
	VECTOR vX, double *pdCV, double *pdPar, BOOL fAuto, int iDesiredPar);
BOOL   JDCALL FCubicSpline(VECTOR vY, VECTOR vT, int cT, double *pdAlpha, VECTOR vG,
    VECTOR vX, double *pdCV, double *pdEDF, BOOL fAuto, int iDesiredDf);
BOOL   JDCALL FCubicSplineTime(VECTOR vY, int cT, double dAlpha, VECTOR vG, BOOL fHP);
BOOL   JDCALL FEWMA(VECTOR vY, int cT, double dLambda0, double dLambda1, VECTOR vG);
BOOL   JDCALL FEWMC(VECTOR vY, VECTOR vX, int cT, double dLambda, BOOL fMean0, VECTOR vG);
/* mtgamma.c */
double JDCALL DBetaFunc(double x, double a, double b);
double JDCALL DGammaFunc(double x, double p);
double JDCALL DLogGamma(double z);
double JDCALL DPolyGamma(double z, int n);
double JDCALL DGamma(double z);
/* mtprob.c */
double JDCALL DErf(double x);
double JDCALL DDensBeta(double x, double a, double b);
double JDCALL DDensChi(double chi, double dDf);
double JDCALL DDensF(double f, double n1, double n2);
double JDCALL DDensGamma(double, double, double);
double JDCALL DDensMises(double x, double dMu, double dKappa);
double JDCALL DDensNormal(double x);
double JDCALL DDensPoisson(double dMu, int iK);
double JDCALL DDensT(double t, double n1);
double JDCALL DProbBeta(double x, double a, double b);
double JDCALL DProbChi(double, double);
double JDCALL DProbF(double, double, double);
double JDCALL DProbGamma(double, double, double);
double JDCALL DProbMises(double x, double dMu, double dKappa);
double JDCALL DProbNormal(double);
double JDCALL DProbPoisson(double dMu, int iK);
double JDCALL DProbT(double, int);
double JDCALL DTailProbChi(double, double);
double JDCALL DTailProbF(double, double, double);
double JDCALL DTailProbNormal(double);
double JDCALL DTailProbT(double, int);
double JDCALL DProbChiNc(double, double, double dnc);
double JDCALL DProbFNc(double, double, double, double dnc);
double JDCALL DProbTNc(double, double, double dnc);
double JDCALL DProbBVN(double dLo1, double dLo2, double dRho);
double JDCALL DProbMVN(int n, VECTOR vX, MATRIX mSigma);
double JDCALL DQuanBeta(double x, double a, double b);
double JDCALL DQuanChi(double p, double v);
double JDCALL DQuanF(double, double, double);
double JDCALL DQuanGamma(double p, double r, double a);
double JDCALL DQuanMises(double p, double dMu, double dKappa);
double JDCALL DQuanNormal(double dProb);
double JDCALL DQuanT(double p, int v);
double JDCALL DQuanTD(double p, double v);
double JDCALL DRanU(void);
double JDCALL DRanBeta(double a, double b);
double JDCALL DRanChi(double);
double JDCALL DRanExp(double);
double JDCALL DRanF(double, double);
double JDCALL DRanGIG(double dNu, double dDelta, double dGamma);
double JDCALL DRanGamma(double, double);
double JDCALL DRanInvGaussian(double dMu, double dLambda);
double JDCALL DRanLogNormal(void);
double JDCALL DRanLogistic(void);
double JDCALL DRanMises(double dKappa);
double JDCALL DRanNormal(void);
double JDCALL DRanNormalPM(void);
double JDCALL DRanStable(double dA, double dB);
double JDCALL DRanStudentT(double dDf);
double JDCALL DRanT(int);
/* mtstats.c */
BOOL   JDCALL FGetAcf(VECTOR vX, int cT, int cLag, VECTOR vAcf);
BOOL   JDCALL FGetAcfRun(VECTOR, int, int, VECTOR);
void   JDCALL DecQRtMult(MATRIX mQt, int cX, int cT, MATRIX mYt, int cY, int cR);
void   JDCALL DecQRtMul(MATRIX mQt, int cX, int cT, MATRIX mY, int cY, int cR);