include/C/ox/oxexport.h

/*========================= functions ======================================*/
/* exported functions */
BOOL	OXCALL	FOxCallBack(OxVALUE *pvFunc, OxVALUE *rtn, OxVALUE *pv, int cArg);
BOOL	OXCALL	FOxCallBackMember(OxVALUE *pvClass, const char *sMember, OxVALUE *rtn, OxVALUE *pv, int cArg);
BOOL	OXCALL	FOxCreateObject(const char *sClass, OxVALUE *rtn, OxVALUE *pv, int cArg);
BOOL	OXCALL	FOxGetDataMember(OxVALUE *pvClass, const char *sMember, OxVALUE *rtn);
BOOL	OXCALL	FOxLibAddFunction(char *sFunc, OxFUNCP pFunc, BOOL fVarArg);
BOOL 	OXCALL  FOxLibAddFunctionEx(char *sFunc, OxFUNCP pFunc, int cArgs, int flFlags);
void	OXCALL	OxFnDouble(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double) );
void	OXCALL	OxFnDouble2(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double) );
void	OXCALL	OxFnDouble3(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double) );
void	OXCALL	OxFnDouble4(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double,double) );
void	OXCALL	OxFnDoubleInt(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,int) );
void 	OXCALL 	OxFnDoubleVec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double), int iVecAt);
void 	OXCALL 	OxFnDouble2Vec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double), int iVecAt);
void 	OXCALL 	OxFnDouble3Vec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double), int iVecAt);
void	OXCALL	OxRunMainExitCall(void (OXCALL * fn)(void));
void	OXCALL	SetOxDataWindow(int (OXCALL * pfnNewOxDataWindow)(const char *, const char *) );
void	OXCALL	SetOxExit(void (OXCALL * pfnNewOxExit)(int) );