include/C/ox/Ox.java

package ox;

import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.Pointer;
import com.sun.jna.PointerType;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
import com.sun.jna.win32.StdCallLibrary;
import com.sun.jna.Platform;

public class Ox implements StdCallLibrary {
	static {
		Native.register(Platform.isWindows() ? "oxwin" : Platform.isMac() ? "libox.7.dylib" : "libox.so.7");
	}
	public static native double c_abs(double xr, double xi);
	public static native int c_div(double xr, double xi, double yr, double yi, DoubleByReference zr, DoubleByReference zi);
	public static native void c_erf(double x, double y, DoubleByReference erfx, DoubleByReference erfy);
	public static native void c_exp(double xr, double xi, DoubleByReference yr, DoubleByReference yi);
	public static native void c_log(double xr, double xi, DoubleByReference yr, DoubleByReference yi);
	public static native void c_mul(double xr, double xi, double yr, double yi, DoubleByReference zr, DoubleByReference zi);
	public static native void c_sqrt(double xr, double xi, DoubleByReference yr, DoubleByReference yi);
	public static native double DBessel01(double x, int type, int n);
	public static native double DBesselNu(double x, int type, double nu);
	public static native double DBetaFunc(double x, double a, double b);
	public static native double DDawson(double x);
	public static native double DDensBeta(double x, double a, double b);
	public static native double DDensChi(double chi, double dDf);
	public static native double DDensF(double f, double n1, double n2);
	public static native double DDensGamma(double double1, double double2, double double3);
	public static native double DDensGH(double dX, double dNu, double dDelta, double dGamma, double dBeta);
	public static native double DDensGIG(double dX, double dNu, double dDelta, double dGamma);
	public static native double DDensMises(double x, double dMu, double dKappa);
	public static native double DDensNormal(double x);
	public static native double DDensPoisson(double dMu, int iK);
	public static native double DDensT(double t, double n1);
	public static native double DDiagXSXt(int iT, Pointer mX, Pointer mS, int cX);
	public static native double DDiagXtSXtt(int iT, Pointer mXt, Pointer mS, int cX);
	public static native void DecQRtMul(Pointer mQt, int cX, int cT, Pointer mY, int cY, int cR);
	public static native void DecQRtMult(Pointer mQt, int cX, int cT, Pointer mYt, int cY, int cR);
	public static native double DEpKernelBandWidth(double[] vX, int iT1, int iT2);
	public static native double DErf(double x);
	public static native double DExpInt(double x);
	public static native double DExpInt1(double x);
	public static native double DExpInte(double x);
	public static native double DGamma(double z);
	public static native double DGammaFunc(double x, double p);
	public static native double DGetInvertEps();
	public static native double DGetInvertEpsNorm(Pointer mA, int cA);
	public static native double DLogGamma(double z);
	public static native double DPolyGamma(double z, int n);
	public static native double DProbBeta(double x, double a, double b);
	public static native double DProbBVN(double dLo1, double dLo2, double dRho);
	public static native double DProbChi(double double1, double double2);
	public static native double DProbChiNc(double double1, double double2, double dnc);
	public static native double DProbF(double double1, double double2, double double3);
	public static native double DProbFNc(double double1, double double2, double double3, double dnc);
	public static native double DProbGamma(double double1, double double2, double double3);
	public static native double DProbMises(double x, double dMu, double dKappa);
	public static native double DProbMVN(int n, double[] vX, Pointer mSigma);
	public static native double DProbNormal(double x);
	public static native double DProbPoisson(double dMu, int iK);
	public static native double DProbT(double x, int iNc);
	public static native double DProbTNc(double double1, double double2, double dnc);
	public static native double DQuanBeta(double x, double a, double b);
	public static native double DQuanChi(double p, double v);
	public static native double DQuanF(double double1, double double2, double double3);
	public static native double DQuanGamma(double p, double r, double a);
	public static native double DQuanMises(double p, double dMu, double dKappa);
	public static native double DQuanNormal(double dProb);
	public static native double DQuanT(double p, int v);
	public static native double DQuanTD(double p, double v);
	public static native double DRanBeta(double a, double b);
	public static native double DRanChi(double double1);
	public static native double DRanExp(double double1);
	public static native double DRanF(double double1, double double2);
	public static native double DRanGamma(double double1, double double2);
	public static native double DRanGIG(double dNu, double dDelta, double dGamma);
	public static native double DRanInvGaussian(double dMu, double dLambda);
	public static native double DRanLogistic();
	public static native double DRanLogNormal();
	public static native double DRanMises(double dKappa);
	public static native double DRanNormal();
	public static native double DRanNormalPM();
	public static native double DRanStable(double dA, double dB);
	public static native double DRanStudentT(double dDf);
	public static native double DRanT(int int1);
	public static native double DRanU();
	public static native double DTailProbChi(double double1, double double2);
	public static native double DTailProbF(double double1, double double2, double double3);
	public static native double DTailProbNormal(double double1);
	public static native double DTailProbT(double double1, int int1);
	public static native double DTrace(Pointer MATRIX1, int int1);
	public static native double DTraceAB(Pointer MATRIX1, Pointer MATRIX2, int int1, int int2);
	public static native double DVecsum(double[] vX, int cX);
	public static native void EigVecDiv(Pointer MATRIX1, double[] VECTOR1, double[] VECTOR2, int int1);
	public static native int FCubicSpline(double[] vY, double[] vT, int cT, double[] pdAlpha, double[] vG, double[] vX, DoubleByReference pdCV, DoubleByReference pdEDF, int fAuto, int iDesiredDf);
	public static native int FCubicSplineTime(double[] vY, int cT, double dAlpha, double[] vG, int fHP);
	public static native int FEpKernel(double[] vY, double[] vT, int cT, DoubleByReference pdAlpha, double[] vG, double[] vX, double[] pdCV, DoubleByReference pdPar, int fAuto, int iDesiredPar);
	public static native int FEWMA(double[] vY, int cT, double dLambda0, double dLambda1, double[] vG);
	public static native int FEWMC(double[] vY, double[] vX, int cT, double dLambda, int fMean0, double[] vG);
	public static native int FFT1d(Pointer mDest, Pointer mSrc, int n, int iReverse, int isComplex);
	public static native void FftComplex(double[] vXr, double[] vXi, int iPower, int iForward);
	public static native int FftDiscrete(double[] vXr, double[] vXi, int cN, int iForward);
	public static native void FftReal(double[] vXr, double[] vXi, int iPower, int iForward);
	public static native int FGetAcf(double[] vX, int cT, int cLag, double[] vAcf);
	public static native int FGetAcfRun(double[] VECTOR1, int int1, int int2, double[] VECTOR2);
	public static native int FGetPartAcf(double[] vAcf, int cAcf, double[] vPartAcf);
	public static native int FIsInf(double d);
	public static native int FIsInfOrNaN(double d);
	public static native int FIsNaN(double d);
	public static native int FOxCallBack(Pointer pvFunc, Pointer rtn, Pointer pv, int cArg);
	public static native int FOxCallBackMember(Pointer pvClass, String sMember, Pointer rtn, Pointer pv, int cArg);
	public static native int FOxCreateObject(String sClass, Pointer rtn, Pointer pv, int cArg);
	public static native int FOxGetDataMember(Pointer pvClass, String sMember, Pointer rtn);

	public interface CallbackOxFunc extends StdCallCallback {
	    void NewOxFunc(Pointer rtn, Pointer pv, int cArg);
	}
	public static native int FOxLibAddFunction(String sFunc, Ox.CallbackOxFunc pFunc, int fVarArg);
	public static native int FOxLibAddFunctionEx(String sFunc, Ox.CallbackOxFunc pFunc, int cArgs, int flFlags);
